Add correct selected day for new schedule functionality

--- a/views/pages/new-schedule.ejs
+++ b/views/pages/new-schedule.ejs
@@ -22,7 +22,7 @@
             <label for="day">Day</label>
             <select id="day" name="day" required>
                 <% for (let i = 0; i < days.length; i ++) {%>
-                    <option value=<%=i%>><%=days[i]%></option>
+                    <option value=<%=i+1%>><%=days[i]%></option>
                 <%}%>
             </select>
         </div>
