--- a/views/pages/new-user.ejs
+++ b/views/pages/new-user.ejs
@@ -21,12 +21,12 @@
         
         <div>
             <label for="email">E-mail</label>
-            <input id="email" type="email" name="email" required>
+            <input id="email" type="email" name="email" required autocomplete="off">
         </div>
         
         <div>
             <label for="password">Password</label>
-            <input id="password" type="password" name="password" required>
+            <input id="password" type="password" name="password" required autocomplete="off">
         </div>
 
         <div id="submit-button-container">
