--- a/views/pages/schedules.ejs
+++ b/views/pages/schedules.ejs
@@ -24,6 +24,9 @@
           </tr>
         <%}%>
     </table>
+    <div id="add-schedule-container">
+      <a id="add-schedule" href="/schedules/new">Add new schedule</a>
+    </div>
 </main>
 </body>
 </html>
