--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -24,6 +24,9 @@
           </tr>
         <%}%>
     </table>
+    <div id="add-user-container">
+      <a id="add-user" href="/users/new">Add new user</a>
+    </div>
 </main>
 </body>
 </html>
